--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "rocketlane-claude",
+  "name": "rocketlane-gemini-automation",
   "version": "1.0.0",
   "dependencies": {
-    "@anthropic-ai/sdk": "^0.24.0",
+    "@google/generative-ai": "^0.21.0",
     "nodemailer": "^6.9.7"
   }
 }
